--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -1259,20 +1259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "138 classificações estão erradas\n",
-      "62 classificações estão certas\n",
-      "\n",
-      "11.5% verdadeiros positivos\n",
-      "31.0% falsos positivos\n",
-      "19.5% verdadeiros negativos\n",
-      "38.0% falsos negativos\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Pedro Vidal\\Desktop\\P1_Cdados_Pedro_Felipe\\23-1a-cd-p1-pedro_felipe\\notebooks\\relatorio.ipynb Cell 40\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#Y104sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m falsos_negativos \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#Y104sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m contador\u001b[39m<\u001b[39m\u001b[39m391\u001b[39m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#Y104sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mif\u001b[39;00m target_avaliado[contador] \u001b[39m!=\u001b[39m testados[contador]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#Y104sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m         qnt_diferente \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Vidal/Desktop/P1_Cdados_Pedro_Felipe/23-1a-cd-p1-pedro_felipe/notebooks/relatorio.ipynb#Y104sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mif\u001b[39;00m target_avaliado[contador] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mNegativo\u001b[39m\u001b[39m'\u001b[39m \u001b[39mand\u001b[39;00m testados[contador] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mNegativo\u001b[39m\u001b[39m'\u001b[39m:\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -1284,7 +1282,7 @@
     "falsos_positivos = 0\n",
     "verdadeiros_negativos = 0\n",
     "falsos_negativos = 0\n",
-    "while contador<200:\n",
+    "while contador<391:\n",
     "    if target_avaliado[contador] != testados[contador]:\n",
     "        qnt_diferente += 1\n",
     "    if target_avaliado[contador] == 'Negativo' and testados[contador] == 'Negativo':\n",
@@ -1298,7 +1296,7 @@
     "    contador += 1\n",
     "    \n",
     "print('{} classificações estão erradas'.format(qnt_diferente))\n",
-    "print('{} classificações estão certas\\n'.format((200-qnt_diferente)))\n",
+    "print('{} classificações estão certas\\n'.format((391-qnt_diferente)))\n",
     "print('{}% verdadeiros positivos'.format(verdadeiros_positivos/2))\n",
     "print('{}% falsos positivos'.format(falsos_positivos/2))\n",
     "print('{}% verdadeiros negativos'.format(verdadeiros_negativos/2))\n",
