--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -373,7 +373,9 @@
    "source": [
     "Faça aqui uma descrição do seu assunto e o que considerou como relevante ou não relevante na classificação dos tweets (Target).\n",
     "O nosso assunto são os reviews de usuários de jogos onlines na plataforma Steam. A partir disso, tendo essas opiniões, separamos duas triagens diferentes:\n",
-    "1 - Opiniões sem teor julgador negativo, classificando tais opiniões como 'Ok'\n",
+    "\n",
+    "1 - Opiniões sem teor julgador negativo, classificando tais opiniões como 'Ok'(podendo ser elas positivas com elogios ao jogo ou neutras)\n",
+    "\n",
     "2 - Opiniões anti-recomendativas, classificando tais opiniões como 'negativo'."
    ]
   },
