--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -1335,25 +1335,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Análise geral:\n",
+    "\n",
+    "Por meio da classificação, vemos uma acurácia de quase 70%. Isso representa um bom resultado, tendo em vista que a maioria das opiniões foram classificadas corretamente. \n",
+    "\n",
+    "Ainda, vemos:\n",
+    "\n",
+    "42.99% representam verdadeiros positivos\n",
+    "\n",
+    "26.17% representam falsos positivos\n",
+    "\n",
+    "26.79% representam verdadeiros negativos\n",
+    "\n",
+    "4.05% representam falsos negativos\n",
+    "\n",
+    "Porém, vê-se que esse resultado não é perfeito. Mas por quê?\n",
+    "\n",
+    "Uma das hipóteses que poderia justificar isso é o fato que muitas reviews eram curtas demais/representavam apenas números, o que poderia acabar confundindo o classificador e não o fazendo encontrar um padrão para isso. Além disso, é válido postular que a base de dados de teste (apenas 321 reviews) não é suficiente para fazer uma análise complexa. Caso houvessem mais reviews, muito provavelmente haveriam mais verdadeiros positivos e verdadeiros negativos.\n",
+    "\n",
+    "- Por que não podemos usar o próprio classificador para gerar mais amostras de treinamento? \n",
+    "\n",
+    "O modelo que temos pode acabar se acostumando aos dados obtidos na planilha de treinamento - exatamente onde os dados foram analisados e comparados -, o que poderia ser prejudicial ao entrar em contato com outros tipos de dados, tendo em vista que o modelo ainda iria trabalhar sob a mesma visão. Isso iria afetar fortemente o funcionamento do modelo ao entrar em contato com uma base de dados muito maior e diversificada.\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Pensando em melhorias:\n",
+    "\n",
+    "Uma necessidade de melhoria relativa à acurácia é em relação ao fato de que as reviews, por várias vezes, são curtas e ralas, tendo – assim – uma menor quantidade de palavras. Isso prejudica a filtragem, tendo em vista que dificulta a diferenciação de opiniões “Ok” e opiniões negativas “Negativo”. A partir disso, uma possível melhoria poderia ser filtrar as notícias que teriam uma específica quantidade mínima de palavras. Para além disso, é válido destacar que apenas 321 frases denotam uma baixa gama de dados, o que poderia enfraquecer o teste, suscitando um aprendizado menos efetivo. Assim, ao aumentar a base de dados, poderíamos ter resultados mais concretos."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Pensando em outras utilidades para Naive Bayes:\n",
+    "\n",
+    "1 - \n",
+    "\n",
+    "2 - "
+   ]
   },
   {
    "cell_type": "markdown",
