--- a/notebooks/relatorio.ipynb
+++ b/notebooks/relatorio.ipynb
@@ -1081,7 +1081,6 @@
    "source": [
     "#Tendo isso, pode-se dar início - de fato - as contas probabilísticas.\n",
     "#Usa-se um exemplo/Frase a classificar\n",
-    "#NaveBayes\n",
     "ex = dados_treinamento.review[292]\n",
     "#Separando\n",
     "ex = ex.split()\n",
@@ -1103,6 +1102,7 @@
    ],
    "source": [
     "#Analisando as probabilidades:\n",
+    "#Naive Bayes\n",
     "import numpy #importando a biblioteca numpy\n",
     "probabilidade_palavra_ok = []\n",
     "for probabilidade in ex:\n",
